[gd_scene load_steps=5 format=2]

[ext_resource path="res://MenusAndUI/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://MenusAndUI/Fonts/slkscr-28.tres" type="DynamicFont" id=2]
[ext_resource path="res://MenusAndUI/Menus/StartMenu.gd" type="Script" id=3]
[ext_resource path="res://MenusAndUI/Styleboxes/SolidBlack.png" type="Texture" id=4]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 304.0
margin_bottom = 164.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 288.0
margin_bottom = 37.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Title"
align = 1
valign = 1

[node name="Gap" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 288.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 35 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 288.0
margin_bottom = 112.0
size_flags_vertical = 3
alignment = 1

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 47.0
margin_right = 142.0
margin_bottom = 25.0
rect_min_size = Vector2( 95, 0 )
size_flags_vertical = 0
text = "New Game"

[node name="LoadGameButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 146.0
margin_right = 241.0
margin_bottom = 25.0
rect_min_size = Vector2( 95, 0 )
size_flags_vertical = 0
text = "Load Game"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 288.0
margin_bottom = 148.0
size_flags_vertical = 3
alignment = 1

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 47.0
margin_right = 142.0
margin_bottom = 25.0
rect_min_size = Vector2( 95, 0 )
size_flags_vertical = 0
text = "Settings"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 146.0
margin_right = 241.0
margin_bottom = 25.0
rect_min_size = Vector2( 95, 0 )
size_flags_vertical = 0
text = "Quit"

[node name="ButtonBlocker" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 160, 88 )
scale = Vector2( 608, 376 )
texture = ExtResource( 4 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/QuitButton" to="." method="_on_QuitButton_pressed"]
